--- a/sequences-starburst/sequences.css
+++ b/sequences-starburst/sequences.css
@@ -3,8 +3,8 @@ body {
   font-size: 12px;
   font-weight: 400;
   background-color: #fff;
-  width: 960px;
-  height: 700px;
+  width: 100%;
+  height: 100%;
   margin-top: 10px;
 }
 
@@ -19,7 +19,7 @@ body {
 }
 
 #sequence {
-  width: 600px;
+  width: 800px;
   height: 70px;
 }
 
